force-app/main/default/objects/AccountSalesArea__c/AccountSalesArea__c.object-meta.xml
<CustomObject>
    <label>Account Sales Area</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Sales Area</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>