force-app/main/default/objects/AccountSalesArea__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>AccountSalesArea</relationshipName>
    <type>Lookup</type>
</CustomField>