force-app/main/default/objects/AccountSalesArea__c/fields/ANTLF__c.field-meta.xml
<CustomField>
    <fullName>ANTLF__c</fullName>
    <label>Max.Part.Deliveries</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>