force-app/main/default/objects/AccountSalesArea__c/fields/AUFSD__c.field-meta.xml
<CustomField>
    <fullName>AUFSD__c</fullName>
    <description>Central order block</description>
    <label>Central order block</label>
    <length>2</length>
    <type>Text</type>
</CustomField>