force-app/main/default/objects/AccountSalesArea__c/fields/AWAHR__c.field-meta.xml
<CustomField>
    <fullName>AWAHR__c</fullName>
    <description>오더확률</description>
    <label>Order probability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>