force-app/main/default/objects/AccountSalesArea__c/fields/BZIRK__c.field-meta.xml
<CustomField>
    <fullName>BZIRK__c</fullName>
    <label>Sales district</label>
    <length>6</length>
    <type>Text</type>
</CustomField>