force-app/main/default/objects/AccountSalesArea__c/fields/FAKSD__c.field-meta.xml
<CustomField>
    <fullName>FAKSD__c</fullName>
    <description>Billing block for sales area</description>
    <label>Billing block for sales area</label>
    <length>2</length>
    <type>Text</type>
</CustomField>