force-app/main/default/objects/AccountSalesArea__c/fields/INCO1__c.field-meta.xml
<CustomField>
    <fullName>INCO1__c</fullName>
    <label>Incoterms</label>
    <length>3</length>
    <type>Text</type>
</CustomField>