force-app/main/default/objects/AccountSalesArea__c/fields/INCO2__c.field-meta.xml
<CustomField>
    <fullName>INCO2__c</fullName>
    <description>인도 조건 2</description>
    <label>Incoterms (Part 2)</label>
    <length>28</length>
    <type>Text</type>
</CustomField>