force-app/main/default/objects/AccountSalesArea__c/fields/KALKS__c.field-meta.xml
<CustomField>
    <fullName>KALKS__c</fullName>
    <description>고객가격절차</description>
    <label>Cust.pric.procedure</label>
    <length>1</length>
    <type>Text</type>
</CustomField>