force-app/main/default/objects/AccountSalesArea__c/fields/KDGRP__c.field-meta.xml
<CustomField>
    <fullName>KDGRP__c</fullName>
    <description>Customer group</description>
    <label>Customer group</label>
    <length>2</length>
    <type>Text</type>
</CustomField>