force-app/main/default/objects/AccountSalesArea__c/fields/KONDA__c.field-meta.xml
<CustomField>
    <fullName>KONDA__c</fullName>
    <description>가격 그룹</description>
    <label>Price group (customer)</label>
    <length>2</length>
    <type>Text</type>
</CustomField>