force-app/main/default/objects/AccountSalesArea__c/fields/KTGRD__c.field-meta.xml
<CustomField>
    <fullName>KTGRD__c</fullName>
    <description>계정지정그룹</description>
    <label>AcctAssgGr</label>
    <length>2</length>
    <type>Text</type>
</CustomField>