force-app/main/default/objects/AccountSalesArea__c/fields/KURST__c.field-meta.xml
<CustomField>
    <fullName>KURST__c</fullName>
    <description>환율 유형</description>
    <label>Exchange Rate Type</label>
    <length>4</length>
    <type>Text</type>
</CustomField>