force-app/main/default/objects/AccountSalesArea__c/fields/KZAZU__c.field-meta.xml
<CustomField>
    <fullName>KZAZU__c</fullName>
    <label>Order Combination</label>
    <length>1</length>
    <type>Text</type>
</CustomField>