force-app/main/default/objects/AccountSalesArea__c/fields/LIFSD__c.field-meta.xml
<CustomField>
    <fullName>LIFSD__c</fullName>
    <description>Delivery block for sales area</description>
    <label>Delivery block for sales area</label>
    <length>2</length>
    <type>Text</type>
</CustomField>