force-app/main/default/objects/AccountSalesArea__c/fields/LOEVM__c.field-meta.xml
<CustomField>
    <fullName>LOEVM__c</fullName>
    <description>삭제지시자</description>
    <label>Del. indicator for sales area</label>
    <length>1</length>
    <type>Text</type>
</CustomField>