force-app/main/default/objects/AccountSalesArea__c/fields/LPRIO__c.field-meta.xml
<CustomField>
    <fullName>LPRIO__c</fullName>
    <description>납품 우선순위</description>
    <label>Delivery Priority</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>