force-app/main/default/objects/AccountSalesArea__c/fields/PLTYP__c.field-meta.xml
<CustomField>
    <fullName>PLTYP__c</fullName>
    <description>가격 리스트</description>
    <label>Price List</label>
    <length>2</length>
    <type>Text</type>
</CustomField>