force-app/main/default/objects/AccountSalesArea__c/fields/SPART__c.field-meta.xml
<CustomField>
    <fullName>SPART__c</fullName>
    <description>제품군</description>
    <label>Division</label>
    <length>2</length>
    <type>Text</type>
</CustomField>