force-app/main/default/objects/AccountSalesArea__c/fields/VKBUR__c.field-meta.xml
<CustomField>
    <fullName>VKBUR__c</fullName>
    <label>Sales Office</label>
    <length>4</length>
    <type>Text</type>
</CustomField>