force-app/main/default/objects/AccountSalesArea__c/fields/VKORG__c.field-meta.xml
<CustomField>
    <fullName>VKORG__c</fullName>
    <label>Sales Organization</label>
    <length>4</length>
    <type>Text</type>
</CustomField>