force-app/main/default/objects/AccountSalesArea__c/fields/VSBED__c.field-meta.xml
<CustomField>
    <fullName>VSBED__c</fullName>
    <label>Shipping Conditions</label>
    <length>2</length>
    <type>Text</type>
</CustomField>