force-app/main/default/objects/AccountSalesArea__c/fields/VTWEG__c.field-meta.xml
<CustomField>
    <fullName>VTWEG__c</fullName>
    <description>유통 경로</description>
    <label>Distribution Channel</label>
    <length>2</length>
    <type>Text</type>
</CustomField>