force-app/main/default/objects/AccountSalesArea__c/fields/WAERS__c.field-meta.xml
<CustomField>
    <fullName>WAERS__c</fullName>
    <description>통화</description>
    <label>Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>