force-app/main/default/objects/AccountSalesArea__c/fields/ZTERM__c.field-meta.xml
<CustomField>
    <fullName>ZTERM__c</fullName>
    <description>지급 조건</description>
    <label>Terms of Payment</label>
    <length>4</length>
    <type>Text</type>
</CustomField>